translation-tool/inputs/source_meta/objects/HSvc_ResolutionCodeRule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Resolution Code is Active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowCaseClosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, and if selected by CSR then Case should be auto-closed</description>
        <label>Close Case on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseRecordType__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Business Support Case</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Spanish__c</fullName>
        <label>Description (Spanish)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Capture description of the Resolution Code Rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( ExpiryDate__c &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>Hsvc_DescriptionArgentina__c</fullName>
        <label>Description(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_DescriptionChile__c</fullName>
        <label>Description(Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_DescriptionEcuador__c</fullName>
        <label>Description(Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_DescriptionPanama__c</fullName>
        <label>Description(Panama)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hsvc_DescriptionPeru__c</fullName>
        <label>Description(Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEffective__c</fullName>
        <formula>IF(AND(EffectiveDate__c  &lt;= TODAY() ,  ExpiryDate__c &gt;= TODAY() ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Effective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResolutionCodeDescription__c</fullName>
        <label>Resolution Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResolutionCodeValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolution Code</label>
        <referenceTo>HSvc_ListOfValues__c</referenceTo>
        <relationshipLabel>Resolution Code Rules</relationshipLabel>
        <relationshipName>Resolution_Code_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolutionCode__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>TNF – Cancelled Service</fullName>
                </value>
                <value>
                    <fullName>TNF – Customer Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Description_Formula__c</fullName>
        <description>Description based on language</description>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK( Description_Spanish__c ), Description__c ,Description_Spanish__c) ,&apos;es_PA&apos;, IF(ISBLANK( Hsvc_DescriptionPanama__c ), Description__c ,Hsvc_DescriptionPanama__c) ,&apos;es_PE&apos;, IF(ISBLANK( Hsvc_DescriptionPeru__c ), Description__c ,Hsvc_DescriptionPeru__c) ,&apos;es_EC&apos;, IF(ISBLANK( Hsvc_DescriptionEcuador__c ), Description__c ,Hsvc_DescriptionEcuador__c) ,&apos;es_CL&apos;, IF(ISBLANK( Hsvc_DescriptionChile__c ), Description__c ,Hsvc_DescriptionChile__c) ,&apos;es_AR&apos;, IF(ISBLANK( Hsvc_DescriptionArgentina__c ), Description__c ,Hsvc_DescriptionArgentina__c) , Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YAHS_DefaultforRecordType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default for Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZeroOutageFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this resolution code, if selected by CSR on a case will NOT count towards calculating Outage time</description>
        <label>Zero Outage Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Resolution Code Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CaseRecordType__c</columns>
        <columns>Description__c</columns>
        <columns>Description_Spanish__c</columns>
        <columns>Active__c</columns>
        <columns>AllowCaseClosure__c</columns>
        <columns>ZeroOutageFlag__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Resolution Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resolution Code Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(ExpiryDate__c &lt; TODAY(),ExpiryDate__c &lt; EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>